fixed Alignment in student page

--- a/src/pages/dashboard/master.css
+++ b/src/pages/dashboard/master.css
@@ -3,25 +3,7 @@
         flex-direction: column;    
     }
 
-    .logout{
-        margin-top: 30px;
-        margin-right: 50px;
-        margin-bottom: 30px;
     
-            display: flex;
-            justify-content: end;
-            
-        
-        
-    }
-    .output-container {
-        background-color: white;
-        height: fit-content;
-        border-radius: 10px;
-        margin: 30px;
-        padding: 30px;
-        align-items: center;
-    }
     
 }
 .main-container-master{
@@ -70,7 +52,6 @@
     color: rgb(241, 240, 240);
     font-size: 10px;
     padding-top: 16px;
-    text-align: center;
 }
 
 input{
